# gungle

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
scripts/: run_dev.py
src/gungle/: config.py  main.py
src/gungle/api/v1/: api.py
src/gungle/api/v1/endpoints/: firearms.py  game.py
src/gungle/database/: __init__.py  database.py  models.py
src/gungle/models/: firearm.py
src/gungle/repositories/: db_firearm_repository.py  firearm_repository.py  test_firearm_repository.py
src/gungle/services/: firearm_service.py  game_service.py
tests/: conftest.py
tests/unit/: test_firearm_repository.py  test_main.py  test_models.py  test_name_guessting.py
